--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
 
         <div class="row">
           <div class="col-md-5 mb-3">
-            <label for="pages">請選擇搜尋頁數：</label>
+            <label for="pages">請選擇搜尋頁數(一頁約25個職缺)：</label>
             <select class="custom-select d-block w-100" id="pages" name="pages" required>
               <option value="">Choose...</option>
               <option>1</option>
@@ -153,6 +153,14 @@
             <div class="custom-control custom-checkbox">
               <input type="checkbox" class="custom-control-input" id="specialty" name="specialty">
               <label class="custom-control-label" for="specialty">擅長工具</label>
+            </div>
+            <div class="custom-control custom-checkbox">
+              <input type="checkbox" class="custom-control-input" id="selectAll" name="selectAll">
+              <label class="custom-control-label" for="selectAll">全部選擇</label>
+            </div>
+            <div class="custom-control custom-checkbox">
+              <input type="checkbox" class="custom-control-input" id="sample" name="sample">
+              <label class="custom-control-label" for="sample">Demo </label>
             </div>
            </div>
         </div>
