small bug fixed

--- a/templates/result.html
+++ b/templates/result.html
@@ -90,7 +90,7 @@
     <div class="clearfix"></div>
 
    <div style="text-align: center;">
-    <span style="float:left;margin-left:5%;margin-top:30px;">本次搜尋共花 {{t1}} 秒</span>
+    <span style="float:left;margin-left:5%;margin-top:30px;">本次搜尋共花 {{total_time}} 秒</span>
     <span style="font-size:36px;position:relative;margin-left:200px">篩選欄位搜尋結果  ({{count}} 筆資料) </span>
     <span style="float: right;margin-right:5%">
         <a href="./static/104_result_{{keyword+'x'+pages|string()}}.csv" download="104.csv">
